[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycompliance"
version = "0.0.1"
description = "Library for working with compliance benchmarks and data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rhmdnd/pycompliance"
"Bug Tracker" = "https://github.com/rhmdnd/pycompliance/issues"
